[gd_scene load_steps=7 format=3 uid="uid://walker123"]

[ext_resource type="Script" path="res://scripts/enemies/walker_enemy.gd" id="1_walker"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_body"]
size = Vector2(24, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hitbox"]
size = Vector2(22, 22)

[sub_resource type="SpriteFrames" id="SpriteFrames_1"]
animations = [{
"frames": [],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[node name="WalkerEnemy" type="CharacterBody2D"]
collision_layer = 3
collision_mask = 2
script = ExtResource("1_walker")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_body")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(0.6, 0.4, 0.2, 1)
sprite_frames = SubResource("SpriteFrames_1")
animation = &"walk"

[node name="VisualBody" type="ColorRect" parent="."]
offset_left = -12.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = 12.0
color = Color(0.6, 0.4, 0.2, 1)

[node name="VisualEyes" type="ColorRect" parent="."]
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = -4.0
color = Color(0.2, 0.2, 0.2, 1)

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 5
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_hitbox")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 5
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("RectangleShape2D_hitbox")

[node name="WallCheck" type="RayCast2D" parent="."]
target_position = Vector2(20, 0)
collision_mask = 2

[node name="FloorCheck" type="RayCast2D" parent="."]
position = Vector2(12, 0)
target_position = Vector2(0, 20)
collision_mask = 2
